about fixed overflow problem

--- a/css/style.css
+++ b/css/style.css
@@ -9142,9 +9142,15 @@ h3 {
 }
 
 .about {
-  overflow-y: auto;
   max-width: 600px;
   margin: 1em auto;
+  overflow-y: auto;
+}
+
+@media screen and (min-width: 750px) {
+  .about {
+    overflow-y: none;
+  }
 }
 
 .cv {
