--- a/sass/partials/_about.scss
+++ b/sass/partials/_about.scss
@@ -1,7 +1,11 @@
 .about {
-    overflow-y: auto;
     max-width: 600px;
     margin: 1em auto;
+    overflow-y: auto;
+
+    @media screen and (min-width: 750px) {
+          overflow-y: none;
+      }
 }
 
 .cv {
